--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+nav{
+    margin: 10px;
+    display: flex;
+    gap: 50px;
+}
+
 /* RESET CSS */
 * {
     margin: 0;
@@ -82,4 +88,15 @@
 .compare-card-img img {
     object-fit: contain;
     width: 100%;
+}
+
+
+
+/* FAVORITES */
+.favorites-card-container{
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
 }
