--- a/src/index.css
+++ b/src/index.css
@@ -78,17 +78,71 @@ a {
     width: 80%;
     margin: 0 auto;
     border-collapse: collapse;
+    background-color: #F9F9F9;
+    font-family: "Lato", sans-serif;
+    font-size: large;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+}
+
+.wine-table thead {
+  position: sticky;
+  top: 100px;
+  background-color: #722F37;
+  color: #C5A46D;
+  z-index: 5;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
 }
 
 .wine-table th,
 .wine-table td {
-    border: 1px solid #ddd;
-    padding: 10px;
+    border: 1px solid #E0E0E0;
+    padding: 15px;
     text-align: left;
 }
 
 .wine-table th {
-    background-color: #f5f5f5;
+    background-color: #722F37;
+    color: #C5A46D;
+}
+
+
+.wine-table tr:hover {
+    background-color: #f1f0f0;
+}
+
+.wine-table button {
+    background-color: transparent;
+    position: relative;
+    overflow: hidden;
+    color: #722F37;
+    border: 1px solid;
+    margin: 0px 10px;
+    font-weight: 700;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-family: "Lato", serif;
+    transition: color 0.3s ease;
+    z-index: 1;
+}
+
+.wine-table button::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 0;
+    background-color: #722F37;
+    z-index: -1;
+    transition: height 0.5s ease;
+}
+
+.wine-table button:hover::before {
+    height: 100%;
+}
+
+.wine-table button:hover {
+    color: #C5A46D;
 }
 
 /* Fine TABELLA */
@@ -191,13 +245,20 @@ a {
 
 header {
     background-color: #722F37;
+    position: fixed;
+    top: 0;
 }
 
 nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 150px;
+    height: 100px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+}
+
+.login{
+    margin-top: 100px;
 }
 
 .logo {
@@ -216,48 +277,47 @@ nav {
     color: #C5A46D;
     font-weight: 700;
     font-size: 1.1rem;
-    font-family: "Lato", sans-serif;
+    font-family: "Playfair Display", serif;
     margin-right: 10px;
 }
 
 .links a {
-  position: relative;
-  text-decoration: none;
-  padding: 5px 5px;
-  transition: transform 0.3s ease;
+    position: relative;
+    text-decoration: none;
+    padding: 5px 5px;
+    transition: transform 0.3s ease;
 }
 
-/* Linea base */
 .links a::after {
-  content: "";
-  position: absolute;
-  left: 50%;
-  bottom: -5px;
-  width: 0;
-  height: 2px;
-  background-color: #C5A46D;
-  transition: all 0.3s ease;
-  transform: translateX(-50%);
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: -5px;
+    width: 0;
+    height: 2px;
+    background-color: #C5A46D;
+    transition: all 0.3s ease;
+    transform: translateX(-50%);
 }
 
-/* Effetto hover per i link NON attivi */
 .links a:hover::after {
-  width: 100%;
+    width: 100%;
 }
 
-/* Stato active */
 .links a.active {
-  transform: translateY(-10px); /* lo alzi */
+    transform: translateY(-10px);
+
 }
 
-/* La linea sempre visibile solo per l'active */
 .links a.active::after {
-  width: 100%;
+    width: 100%;
 }
 
 
 .links button {
     background-color: transparent;
+    position: relative;
+    overflow: hidden;
     color: #C5A46D;
     font-size: 1rem;
     border: 2px solid;
@@ -265,7 +325,142 @@ nav {
     display: flex;
     align-items: center;
     border-radius: 5px;
-    font-family: "Lato", sans-serif;
+    font-family: "Playfair Display", serif;
+    z-index: 1;
+    transition: color 0.3s ease;
+}
+
+
+.links button::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 0;
+    background-color: #C5A46D;
+    z-index: -1;
+    transition: height 0.5s ease;
+    border-radius: 3px;
+}
+
+
+
+.links button:hover::before {
+    height: 100%;
+
+}
+
+.links button:hover {
+    color: #722F37;
 }
 
 /* Fine HEADER */
+
+
+
+
+
+
+
+
+/* HERO */
+.wine-hero{
+    width: 100%;
+    height: 900px;
+    background-image: url(/public/img/hero-wine.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+}
+
+.winery-hero{
+    width: 100%;
+    height: 900px;
+    background-image: url(/public/img/hero-winery.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+}
+
+.titolo{
+    color: #C5A46D;
+    font-size: 4rem;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 40px;
+}
+
+/* FINE HERO */
+
+
+
+
+
+
+/* Barra di ricerca */
+.search {
+    width: 80%;
+    margin: 50px auto;
+    display: block;
+    padding: 10px 10px 10px 40px;
+    border-color: #E0E0E0;
+    border-radius: 5px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+    background: url('https://cdn-icons-png.flaticon.com/512/622/622669.png') no-repeat 10px center;
+    background-size: 20px;
+}
+
+
+/* Fine Barra di ricerca */
+
+
+
+
+
+/* Filter */
+.filtro {
+    width: 80%;
+    margin: 30px auto;
+    display: block;
+}
+.filtro label{
+    margin-right: 20px;
+    font-family: "Lato, sans-serif";
+}
+
+/* Fine Filter */
+
+
+
+
+/* Form Generics */
+input:focus,
+textarea:focus,
+select:focus {
+    outline-color: #C5A46D;
+}
+
+input,
+textarea,
+select {
+    padding: 10px;
+    border-color: #E0E0E0;
+    border-radius: 5px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+
+}
+
+input::placeholder,
+textarea::placeholder,
+select::placeholder {
+    color: #722F37;
+    font-weight: 600;
+    font-family: "Lato, sans-serif";
+}
+/* Fine Form Generics */
